[package]
name = "tinted_luau_sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tinted-software/luau-rs"
description = "Luau bindings for Rust"

[lib]
name = "luau_sys"

[dependencies]

[build-dependencies]
pkg-config = "0.3.31"

[[example]]
name = "hello"

[features]
default = ["std"]
std = []
