[package]
name = "tinted_luau_sys"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/tinted-software/luau-rs"
description = "Luau bindings for Rust"

[lib]
name = "luau_sys"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.31"
clang-sys = "1.8.1"

[[example]]
name = "hello"

[features]
default = ["std"]
std = []
